<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context=".ui.AddGameFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="360dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="20dp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlatform"
                android:layout_width="360dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/platform"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDateDay"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/day"
                    android:padding="10dp"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMonth"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/month"
                    android:padding="10dp"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYear"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"
                    android:padding="10dp"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.constraintlayout.widget.ConstraintLayout>